<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".NewItemSheet">

    <TextView
        android:id="@+id/tvItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/bs_title_add" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tiItemName"
            android:hint="@string/name_ti_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tiItemDescription"
            android:hint="@string/description_ti_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tiItemAmount"
            android:inputType="number"
            android:hint="@string/amount_ti_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:backgroundTint="@color/customColor"
        android:textColor="?colorOnPrimary"
        android:text="@string/btn_add"/>

</LinearLayout>