<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/MyLL"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/border_line_bottom">

            <TextView

                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/app_name"
                android:textSize="22sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:src="@drawable/ic_clear"
                android:backgroundTint="@color/customColor"
                android:background="@drawable/rounded_corners"
                android:id="@+id/btnClear"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/clear_btn_cd"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItemsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_btn_cd"
        android:id="@+id/btnNewItem"
        android:backgroundTint="@color/customColor"
        android:textColor="?colorOnPrimary"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:icon="@drawable/ic_add"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:iconTint="?colorOnPrimary"/>

</RelativeLayout>